# docker-compose-example

./: README.md  docker-composer.yml  schema.uml
client/: Dockerfile  main.py  pyproject.toml
server/: Dockerfile  main.py  pyproject.toml
